--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   provider: ^6.1.5
   change_app_package_name: ^1.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  persistent_bottom_nav_bar_v2: ^6.0.1
 
 dev_dependencies:
   flutter_test:
