--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^6.0.1
   flutter_localizations:
     sdk: flutter
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
