--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   sqflite: ^2.4.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
