--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-  provider: ^6.1.5
+
   change_app_package_name: ^1.5.0
   flutter_launcher_icons: ^0.14.4
   # The following adds the Cupertino Icons font to your application.
@@ -28,6 +27,7 @@ dependencies:
   intl: ^0.20.2
   path: ^1.9.1
   url_launcher: ^6.3.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
